# FinMathKit

./: BSM.cpp  BSM.hpp  CMakeLists.txt  DATA.txt  Diffusion.h  GridOP_S3.hpp  GridOp_S3.h  IRProvider.cpp  IRProvider.h  IRProviderConst.h  MCOptionHedger.h  MCOptionHedger.hpp  MCOptionPricer.h  MCOptionPricer.hpp  MonteCarlo.h  MonteCarlo.hpp  Options.h  PATHS.txt  README.md  Time.h  Vanillas.h  gridpricer.cpp  hedger.cpp  main.cpp  mainhedge.cpp  mmult.c  montemain.cpp  pricer.cpp  sirius.sh  techstack.md  techstack.yml
.github/workflows/: cmake.yml
